<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">When is it ?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>

    <string name="just">just</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="left">left</string>

    <string name="delete_event">Delete the event ?</string>
    <string name="delete_event_explication">The event will be permanently deleted from the upcoming events list.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="select_event">Select an event</string>


</resources>
