<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/nameTextView"
                android:text="Lala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:paddingBottom="3dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/just"
                    android:textStyle="italic"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="14"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold"
                    android:id="@+id/daysTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/days"
                    android:textStyle="italic"
                    android:id="@+id/daysLabelTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="5"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold"
                    android:id="@+id/hoursTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/hours"
                    android:textStyle="italic"
                    android:id="@+id/hoursLabelTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="12"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold"
                    android:id="@+id/minutesTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/minutes"
                    android:textStyle="italic"
                    android:id="@+id/minutesLabelTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="49"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold"
                    android:id="@+id/secondsTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/seconds"
                    android:textStyle="italic"
                    android:id="@+id/secondsLabelTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/left"
                    android:textStyle="italic"
                    android:layout_marginLeft="3dp"
                    android:id="@+id/leftTextView" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>